fix height and overflow issues

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,8 @@
     --font-size: min(6vw, 1.8rem);
     --small-font-size: min(5vw, 1.4rem);
 
-    --section-width: 90%;
+    --section-width: 100%;
+    --section-padding: 0 var(--medium-unit);
     --section-max-width: 1000px;
 
     --accent-color: #f39c12;
@@ -69,7 +70,11 @@ section {
     width: var(--section-width);
     max-width: var(--section-max-width);
     margin: auto;
+    margin-bottom: var(--large-unit);
     font-size: var(--font-size);
+    box-sizing: border-box;
+    padding: var(--section-padding);
+    overflow-x: hidden;
 }
 
 section>header {
@@ -130,6 +135,7 @@ section.landing {
     flex: auto 1;
     flex-direction: column;
     justify-content: space-between;
+    overflow-y: hidden;
 }
 
 section.landing>header {
@@ -171,16 +177,14 @@ section.landing>footer>button {
 }
 
 @keyframes scroll-down-icon-animation {
-    0% {
+
+    from,
+    to {
         transform: translateY(0%);
     }
 
     50% {
         transform: translateY(var(--medium-unit));
-    }
-
-    100% {
-        transform: translateY(0%);
     }
 }
 
@@ -209,17 +213,12 @@ section.internship {
     gap: var(--large-unit);
 }
 
-.chat {
-    display: flex;
-    flex-direction: column;
-    gap: var(--large-unit);
-}
-
 .chat-bubble {
     position: relative;
     max-width: min(100%, 50rem);
     font-size: var(--font-size);
     padding: var(--small-unit) var(--medium-unit);
+    margin-bottom: var(--large-unit);
     border-radius: var(--small-unit);
     box-shadow: 0px 2px 4px rgba(0, 0, 0, .2);
     hyphens: auto;
@@ -297,16 +296,11 @@ section.projects {
     gap: var(--large-unit);
 }
 
-section.projects>main {
-    display: flex;
-    flex-direction: column;
-    gap: var(--large-unit);
-}
-
 section.projects>main div.projects__project {
     display: flex;
     flex-direction: column;
     gap: var(--medium-unit);
+    margin-bottom: var(--large-unit);
 }
 
 section.projects>main div.slides {
